--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Мой сайт</title>
+    <meta charset="UTF-8">
+    <title>Мой сайт</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Привет!</h1>
   <p>Это мой первый сайт на GitHub Pages 🚀</p>
 </body>
 </html>
+
