--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <title>Мой сайт</title>
-    <link rel="stylesheet" href="style.css">
-</head>
 <body>
-  <h1>Привет!</h1>
-  <p>Это мой первый сайт на GitHub Pages 🚀</p>
-</body>
-</html>
+  <div class="container">
+    <h1>Привет!</h1>
+    <p>Это мой первый сайт на GitHub Pages 🚀</p>
 
+    <a href="https://t.me/HEGR_FOV" target="_blank" class="btn">
+      Перейти в мой Telegram
+    </a>
+
+  </div>
+</body>
