--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>Мой сайт</title>
+
+  <!-- ВОТ ЭТА СТРОКА ПОДКЛЮЧАЕТ CSS -->
+  <link rel="stylesheet" href="style.css">
+
+</head>
+
 <body>
   <div class="container">
     <h1>Привет!</h1>
@@ -9,3 +20,4 @@
 
   </div>
 </body>
+</html>
