--- a/index.html
+++ b/index.html
@@ -3,21 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Мой сайт</title>
-
-  <!-- ВОТ ЭТА СТРОКА ПОДКЛЮЧАЕТ CSS -->
   <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
-  <div class="container">
-    <h1>Привет!</h1>
-    <p>Это мой первый сайт на GitHub Pages 🚀</p>
+
+  <div class="glass-card">
+    <h1>Привет 👋</h1>
+    <p>Это мой первый стильный сайт на GitHub Pages 🚀</p>
 
     <a href="https://t.me/HEGR_FOV" target="_blank" class="btn">
       Перейти в мой Telegram
     </a>
-
   </div>
+
 </body>
 </html>
