--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 
   <div class="page">
 
+    <!-- МЕНЮ -->
+    <nav class="nav">
+      <div class="logo">MySite</div>
+
+      <div class="nav-right">
+        <button class="theme-btn" id="themeBtn">🌙</button>
+      </div>
+    </nav>
+
+    <!-- КОНТЕНТ -->
     <header class="header">
       <h1>Привет 👋</h1>
       <p>Это мой первый стильный сайт на GitHub Pages 🚀</p>
@@ -43,5 +53,6 @@
 
   </div>
 
+  <script src="script.js"></script>
 </body>
 </html>
