--- a/index.html
+++ b/index.html
@@ -19,37 +19,37 @@
     </nav>
 
     <!-- КОНТЕНТ -->
-    <header class="header">
-      <h1>Привет 👋</h1>
-      <p>Это мой первый стильный сайт на GitHub Pages 🚀</p>
-      <a href="https://t.me/HEGR_FOV" target="_blank" class="btn">
-        Перейти в мой TGK
-      </a>
-    </header>
+    <div class="container">
+      <header class="header">
+        <h1>Привет 👋</h1>
+        <p>Это мой первый стильный сайт на GitHub Pages 🚀</p>
+        <a href="https://t.me/HEGR_FOV" target="_blank" class="btn">
+          Перейти в мой TGK
+        </a>
+      </header>
 
-    <main class="content">
+      <main class="content">
+        <section class="card">
+          <h2>Обо мне</h2>
+          <p>Я создаю сайты, учусь и развиваюсь в веб-разработке. Это мой первый проект на GitHub Pages.</p>
+        </section>
 
-      <section class="card">
-        <h2>Обо мне</h2>
-        <p>Я создаю сайты, учусь и развиваюсь в веб-разработке. Это мой первый проект на GitHub Pages.</p>
-      </section>
+        <section class="card">
+          <h2>Навыки</h2>
+          <div class="skills">
+            <span class="skill">HTML</span>
+            <span class="skill">CSS</span>
+            <span class="skill">GitHub</span>
+            <span class="skill">JS (скоро)</span>
+          </div>
+        </section>
 
-      <section class="card">
-        <h2>Навыки</h2>
-        <div class="skills">
-          <span class="skill">HTML</span>
-          <span class="skill">CSS</span>
-          <span class="skill">GitHub</span>
-          <span class="skill">JS (скоро)</span>
-        </div>
-      </section>
-
-      <section class="card">
-        <h2>Проекты</h2>
-        <p>Скоро добавлю больше проектов. Пока это — стартовая страница.</p>
-      </section>
-
-    </main>
+        <section class="card">
+          <h2>Проекты</h2>
+          <p>Скоро добавлю больше проектов. Пока это — стартовая страница.</p>
+        </section>
+      </main>
+    </div>
 
   </div>
 
