--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <main class="content">
         <section class="card">
           <h2>Обо мне</h2>
-          <p>Я создаю сайты, учусь и развиваюсь в веб-разработке. Это мой первый проект на GitHub Pages.</p>
+          <p>Меня завут Максим, я создаю сайты, учусь и развиваюсь в веб-разработке. Это мой первый проект на GitHub Pages.</p>
         </section>
 
         <section class="card">
@@ -46,7 +46,7 @@
 
         <section class="card">
           <h2>Проекты</h2>
-          <p>Скоро добавлю больше проектов. Пока это — стартовая страница.</p>
+          <p>Скоро тут будет больше проектов. Пока это — стартовая страница.</p>
         </section>
       </main>
     </div>
@@ -56,3 +56,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
