--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a href="#about" class="nav-link">Обо мне</a>
         <a href="#skills" class="nav-link">Навыки</a>
         <a href="#projects" class="nav-link">Проекты</a>
+        <a href="#contact" class="nav-link">Контакты</a>
 
         <button class="theme-btn" id="themeBtn">🌙</button>
       </div>
@@ -55,6 +56,12 @@
         <section id="projects" class="card">
           <h2>Проекты</h2>
           <p>Скоро тут будет больше проектов. Пока это — стартовая страница.</p>
+        </section>
+
+        <section id="contact" class="card">
+          <h2>Контакты</h2>
+          <p>Напиши мне в Telegram:</p>
+          <a href="https://t.me/HEGR_FOV" target="_blank" class="btn">Telegram</a>
         </section>
 
       </main>
