--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
         <span class="logo-text">MaxDev</span>
       </div>
 
-      <div class="nav-right">
+      <div class="nav-right" id="navLinks">
         <a href="#about" class="nav-link">Обо мне</a>
         <a href="#skills" class="nav-link">Навыки</a>
         <a href="#projects" class="nav-link">Проекты</a>
+        <a href="#experience" class="nav-link">Опыт</a>
         <a href="#contact" class="nav-link">Контакты</a>
-
         <button class="theme-btn" id="themeBtn">🌙</button>
       </div>
+
+      <button class="burger" id="burger">
+        ☰
+      </button>
     </nav>
 
     <!-- КОНТЕНТ -->
@@ -55,7 +59,26 @@
 
         <section id="projects" class="card">
           <h2>Проекты</h2>
-          <p>Скоро тут будет больше проектов. Пока это — стартовая страница.</p>
+          <ul class="project-list">
+            <li class="project-item">
+              <strong>Сайт-портфолио</strong> — этот проект, стартовая страница.
+            </li>
+            <li class="project-item">
+              <strong>Проект 2</strong> — будет добавлен позже.
+            </li>
+          </ul>
+        </section>
+
+        <section id="experience" class="card">
+          <h2>Опыт / Образование</h2>
+          <ul class="exp-list">
+            <li class="exp-item">
+              <strong>Учусь веб-разработке</strong> — самостоятельно, по курсам и практике.
+            </li>
+            <li class="exp-item">
+              <strong>Проекты</strong> — делаю простые сайты и учусь на практике.
+            </li>
+          </ul>
         </section>
 
         <section id="contact" class="card">
@@ -66,6 +89,9 @@
 
       </main>
     </div>
+
+    <!-- кнопка вверх -->
+    <button id="topBtn" class="top-btn">↑</button>
 
   </div>
 
