--- a/index.html
+++ b/index.html
@@ -91,10 +91,11 @@
     </div>
 
     <!-- кнопка вверх -->
-    <button id="topBtn" class="top-btn">↑</button>
+    <button id="topBtn" class="top-btn" aria-label="Наверх">↑</button>
 
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
