--- a/index.html
+++ b/index.html
@@ -91,11 +91,12 @@
     </div>
 
     <!-- кнопка вверх -->
-    <button id="topBtn" class="top-btn" aria-label="Наверх">↑</button>
+   <button class="theme-btn" id="themeBtn">🌙</button>
 
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
 
