--- a/index.html
+++ b/index.html
@@ -91,12 +91,13 @@
     </div>
 
     <!-- кнопка вверх -->
-   <button class="theme-btn" id="themeBtn">🌙</button>
+  <button class="top-btn" id="topBtn">⬆</button>
 
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
