--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>MaxDev — портфолио</title>
+  <meta name="description" content="Портфолио Максима — веб-разработка, проекты, обучение и эксперименты.">
 
   <link rel="stylesheet" href="style.css">
 </head>
@@ -25,12 +27,22 @@
         <a href="#experience" class="nav-link">Опыт</a>
         <a href="#contact" class="nav-link">Контакты</a>
 
-        <button class="theme-btn" id="themeBtn" aria-label="Сменить тему">
+        <button
+          class="theme-btn"
+          id="themeBtn"
+          aria-label="Сменить тему"
+          title="Сменить тему"
+        >
           🌙
         </button>
       </div>
 
-      <button class="burger" id="burger" aria-label="Открыть меню">
+      <button
+        class="burger"
+        id="burger"
+        aria-label="Открыть меню"
+        title="Открыть меню"
+      >
         ☰
       </button>
     </nav>
@@ -68,7 +80,7 @@
             <span class="skill">HTML</span>
             <span class="skill">CSS</span>
             <span class="skill">GitHub</span>
-            <span class="skill">JS (скоро)</span>
+            <span class="skill">JavaScript</span>
           </div>
         </section>
 
@@ -92,14 +104,4 @@
               курсы и практика.
             </li>
             <li class="exp-item">
-              <strong>Проекты</strong> — простые сайты и эксперименты.
-            </li>
-          </ul>
-        </section>
-
-        <section id="contact" class="card">
-          <h2>Контакты</h2>
-          <p>Напиши мне в Telegram:</p>
-
-          <a
-            hre
+              <strong>Пр
