--- a/index.html
+++ b/index.html
@@ -3,105 +3,92 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>MaxDev — портфолио</title>
-  <meta name="description" content="Портфолио Максима — веб-разработка, проекты, обучение и эксперименты.">
 
-  <link rel="stylesheet" href="style.css">
+  <meta name="description" content="Портфолио Максима — веб-разработка и проекты">
+  <link rel="stylesheet" href="style.css?v=1.2">
 </head>
 <body>
 
-  <div class="page">
+<div class="page">
 
-    <!-- ================= NAV ================= -->
-    <nav class="nav">
-      <div class="logo">
-        <span class="logo-dot"></span>
-        <span class="logo-text">MaxDev</span>
-      </div>
+  <nav class="nav">
+    <div class="logo">
+      <span class="logo-dot"></span>
+      <span class="logo-text">MaxDev</span>
+    </div>
 
-      <div class="nav-right" id="navLinks">
-        <a href="#about" class="nav-link">Обо мне</a>
-        <a href="#skills" class="nav-link">Навыки</a>
-        <a href="#projects" class="nav-link">Проекты</a>
-        <a href="#experience" class="nav-link">Опыт</a>
-        <a href="#contact" class="nav-link">Контакты</a>
+    <div class="nav-right" id="navLinks">
+      <a href="#about" class="nav-link">Обо мне</a>
+      <a href="#skills" class="nav-link">Навыки</a>
+      <a href="#projects" class="nav-link">Проекты</a>
+      <a href="#experience" class="nav-link">Опыт</a>
+      <a href="#contact" class="nav-link">Контакты</a>
 
-        <button
-          class="theme-btn"
-          id="themeBtn"
-          aria-label="Сменить тему"
-          title="Сменить тему"
-        >
-          🌙
-        </button>
-      </div>
+      <button class="theme-btn" id="themeBtn" aria-label="Сменить тему">🌙</button>
+    </div>
 
-      <button
-        class="burger"
-        id="burger"
-        aria-label="Открыть меню"
-        title="Открыть меню"
-      >
-        ☰
-      </button>
-    </nav>
+    <button class="burger" id="burger" aria-label="Открыть меню">☰</button>
+  </nav>
 
-    <!-- ================= CONTENT ================= -->
-    <div class="container">
+  <div class="container">
 
-      <header class="header">
-        <h1>Привет 👋</h1>
-        <p>Это мой первый стильный сайт на GitHub Pages 🚀</p>
+    <header class="header">
+      <h1>Привет 👋</h1>
+      <p>Это мой первый стильный сайт на GitHub Pages 🚀</p>
 
-        <a
-          href="https://t.me/HEGR_FOV"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="btn"
-        >
-          Перейти в мой TGK
-        </a>
-      </header>
+      <a href="https://t.me/HEGR_FOV" target="_blank" rel="noopener noreferrer" class="btn">
+        Перейти в мой TGK
+      </a>
+    </header>
 
-      <main class="content">
+    <main class="content">
 
-        <section id="about" class="card">
-          <h2>Обо мне</h2>
-          <p>
-            Меня зовут Максим, я создаю сайты, учусь и развиваюсь
-            в веб-разработке. Это мой первый проект на GitHub Pages.
-          </p>
-        </section>
+      <section id="about" class="card">
+        <h2>Обо мне</h2>
+        <p>Меня зовут Максим, я изучаю веб-разработку и делаю сайты.</p>
+      </section>
 
-        <section id="skills" class="card">
-          <h2>Навыки</h2>
-          <div class="skills">
-            <span class="skill">HTML</span>
-            <span class="skill">CSS</span>
-            <span class="skill">GitHub</span>
-            <span class="skill">JavaScript</span>
-          </div>
-        </section>
+      <section id="skills" class="card">
+        <h2>Навыки</h2>
+        <div class="skills">
+          <span class="skill">HTML</span>
+          <span class="skill">CSS</span>
+          <span class="skill">GitHub</span>
+          <span class="skill">JavaScript</span>
+        </div>
+      </section>
 
-        <section id="projects" class="card">
-          <h2>Проекты</h2>
-          <ul class="project-list">
-            <li class="project-item">
-              <strong>Сайт-портфолио</strong> — этот проект, стартовая страница.
-            </li>
-            <li class="project-item">
-              <strong>Проект 2</strong> — будет добавлен позже.
-            </li>
-          </ul>
-        </section>
+      <section id="projects" class="card">
+        <h2>Проекты</h2>
+        <ul>
+          <li><strong>Портфолио</strong> — этот сайт</li>
+          <li><strong>Проект 2</strong> — скоро</li>
+        </ul>
+      </section>
 
-        <section id="experience" class="card">
-          <h2>Опыт / Образование</h2>
-          <ul class="exp-list">
-            <li class="exp-item">
-              <strong>Веб-разработка</strong> — самостоятельное обучение,
-              курсы и практика.
-            </li>
-            <li class="exp-item">
-              <strong>Пр
+      <section id="experience" class="card">
+        <h2>Опыт</h2>
+        <ul>
+          <li>Самообучение</li>
+          <li>Практика</li>
+        </ul>
+      </section>
+
+      <section id="contact" class="card">
+        <h2>Контакты</h2>
+        <p>
+          <a href="https://t.me/HEGR_FOV" target="_blank">Telegram</a>
+        </p>
+      </section>
+
+    </main>
+  </div>
+
+  <button class="top-btn" id="topBtn">⬆</button>
+
+</div>
+
+<script src="script.js?v=1.2"></script>
+</body>
+</html>
